test/conformance/chainsaw/mutate/cascading/two-foreach-rules/configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm
  annotations:
    mutation1: '1'
    mutation2: 'found mutation1: 1'
