test/conformance/chainsaw/mutate/cascading/two-foreach-rules/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-chain
status:
  conditions:
  - reason: Succeeded
    status: 'True'
    type: Ready
